--- a/single-price-grid-component-master/styles.css
+++ b/single-price-grid-component-master/styles.css
@@ -1,6 +1,9 @@
 html{
     box-sizing: border-box;
+    font-family: 'Karla', sans-serif;
 }
+
+
 
 h2, h4, p{
     margin: 0;
@@ -10,41 +13,128 @@ h2, h4, p{
     box-sizing: inherit;
 }
 
+/* card section styling */
 #card{
-    height: 400px;
-    width: 600px;
-    border: 3px solid grey;
-    margin: 100px auto; 
+    /* height: 400px;
+    width: 600px; */
+    /* margin: 100px auto;  */
+     /* [horizontal offset] [vertical offset] [blur radius] []optional spread radius] [color] */
+    box-shadow: 3px 4px 7px 2px rgba(0,0,0,0.35);
+    border-radius: 5px; 
+    overflow: hidden;
 }
 
+/* top section styling */
 #top-section{
-    height: 40%;
+    height: 45%;
     width: 100%;
-    border: 2px solid red;
+    padding: 25px;
 }
 
+/* bottom section styling */
 #bottom-section{
     width: 100%;
-    height: 60%;
-    border: 2px solid green;
+    height: 55%;
+    color: #fff;
+   
 }
 
 #bottom-left-section{
     display: inline-block;
-    width: 50%;
+    width: 100%; 
     height: 100%;
-    border: 2px solid yellow;
     vertical-align: top;
-
+    background-color:  #2ab2af; 
+    padding: 25px;
 }
 
 #bottom-right-section{
     display: inline-block;
-    width: 50%;
+    width: 100%; 
     height: 100%;
-    border: 2px solid yellow;
     vertical-align: top;
+    background-color: #2EBFBD;
+    padding: 20px;    
+}
+
+/* styling top-section content */
+#top-section h2{
+    color: #2ab2af;
+    margin-bottom: 15px; 
+}
+
+#top-section h4{
+    color:  #c0df34;
+    margin-bottom: 10px;
+}
+
+#top-section p{
+    color:  #8593ab;
+}
+
+/* button styling */
+button{
+    color: #fff;
+    background-color: #c0df34;
+    text-align: center;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+button:hover{
+    cursor: pointer;
+    background-color:  #778a25;
+    transform: scale(1.03);
 }
 
 
+#bottom-left-section h4{
+    margin-bottom: 20px;
+}
 
+#pricing{
+    display: inline-block;
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+#pricing-frequency{
+    display: inline-block;
+    font-size: 0.8rem;
+    opacity: 0.7;
+    margin-left: 5px;
+    margin-bottom: 15px;
+    position: relative;
+    top: -3px
+}
+
+#pricing-section{
+    margin-bottom: 35px;
+}
+
+#pricing-section h4{
+    font-size: 0.8rem;
+    opacity: 0.7;
+}
+
+ul{
+    list-style: none;
+    padding: 0;
+    font-size: 0.8rem;
+    opacity: 0.8
+}
+
+
+@media(min-width: 576px){
+     #card{
+        width: 550px;
+        height: 400px;
+    } 
+    
+    #bottom-left-section, #bottom-right-section{
+        width: 50%;
+    } 
+  
+}
