--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@ h2, h4, p{
 #card{
     /* height: 400px;
     width: 600px; */
-    /* margin: 100px auto;  */
+    margin: 30px auto;  
      /* [horizontal offset] [vertical offset] [blur radius] []optional spread radius] [color] */
     box-shadow: 3px 4px 7px 2px rgba(0,0,0,0.35);
-    border-radius: 5px; 
+    border-radius: 7px; 
     overflow: hidden;
 }
 
@@ -33,6 +33,8 @@ h2, h4, p{
 
 /* bottom section styling */
 #bottom-section{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 55%;
     color: #fff;
@@ -40,21 +42,17 @@ h2, h4, p{
 }
 
 #bottom-left-section{
-    display: inline-block;
-    width: 100%; 
     height: 100%;
-    vertical-align: top;
     background-color:  #2ab2af; 
     padding: 25px;
+    flex-basis: 50%;
 }
 
 #bottom-right-section{
-    display: inline-block;
-    width: 100%; 
     height: 100%;
-    vertical-align: top;
     background-color: #2EBFBD;
-    padding: 20px;    
+    padding: 20px;  
+    flex-basis: 50%;  
 }
 
 /* styling top-section content */
@@ -94,27 +92,26 @@ button:hover{
     margin-bottom: 20px;
 }
 
+#pricing-section{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
 #pricing{
-    display: inline-block;
     font-size: 1.4rem;
     font-weight: 700;
 }
 
 #pricing-frequency{
-    display: inline-block;
     font-size: 0.8rem;
     opacity: 0.7;
     margin-left: 5px;
-    margin-bottom: 15px;
-    position: relative;
-    top: -3px
+    
 }
 
-#pricing-section{
-    margin-bottom: 35px;
-}
 
-#pricing-section h4{
+#access{
     font-size: 0.8rem;
     opacity: 0.7;
 }
@@ -126,6 +123,7 @@ ul{
     opacity: 0.8
 }
 
+/* Responsive design  */
 
 @media(min-width: 576px){
      #card{
@@ -133,8 +131,7 @@ ul{
         height: 400px;
     } 
     
-    #bottom-left-section, #bottom-right-section{
-        width: 50%;
+    #bottom-section{
+        flex-direction: row;
     } 
-  
 }
